--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -502,8 +502,8 @@ These Ly-α absorption systems can not only be used to find the location and clu
 We distinguish different types of absorption systems:
 \begin{itemize}
 	\item The \textbf{Ly-α forest} consists of many thin absorption lines,
-	corresponding to a column density of neutral hydrogen $N_{\mathrm{H}\textsc{i}} \leq \SI{e17}{\centi\meter\tothe{-2}}$.
-	\item \textbf{Damped Ly-α systems} have larger column densities of $N_{\mathrm{H}\textsc{i}} \geq \SI{e20}{\centi\meter\tothe{-2}}$,
+	corresponding to a column density of neutral hydrogen $N_{\mathrm{H}\textsc{I}} \leq \SI{e17}{\centi\meter\tothe{-2}}$.
+	\item \textbf{Damped Ly-α systems} have larger column densities of $N_{\mathrm{H}\textsc{I}} \geq \SI{e20}{\centi\meter\tothe{-2}}$,
 	which absorb the quasar light completely at the Ly-α wavelength.
 \end{itemize}
 
@@ -515,7 +515,7 @@ Studies of quasar absorption provide a way to find the start of reionization, si
 These Damped Ly-α systems completely absorb the light of quasars along the line of sight.
 This strong absorption is called the \emph{Gunn-Peterson trough}, and can only be observed for quasars with redshift larger than $6$, which puts the epoch of reionization at that point.
 
-At $z \approx 3$, we find that only about half of the baryons are still neutral, which means that about half of them are already ionized.
+At $z \approx 3$, we find that only about $5 \%$ of the baryons are still neutral, which means that about $95 \%$ are already ionized.
 This marks the point at which the reionization of the universe was already mostly completed.
 
 
