Changes to 5.12 and 5.13

--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -551,7 +551,7 @@ To our cosmological model, which describes background expansion and the evolutio
 \subsection{Gas cooling}
 Gas can cool through different processes:
 \begin{itemize}
-	\item  Hot gas (hotter than \SI{107}{\kelvin}) in massive haloes is fully ionised and can cool through thermal bremsstrahlung (Cf. X-ray emission of galaxy clusters).
+	\item  Hot gas (hotter than \SI{e7}{\kelvin}) in massive haloes is fully ionised and can cool through thermal bremsstrahlung (Cf. X-ray emission of galaxy clusters).
 	At high redshift $(z 
 	\geq 6)$, cooling can also proceed via inverse compton scattering of CMB photons by electrons
 	\item Warm gas (\SIrange{e4}{e6}{\kelvin}) is partially ionised and can cool via atomic excitation and de-excitation mechanisms.
@@ -560,7 +560,7 @@ Gas can cool through different processes:
 	Cooling is still possible by collisional (de-)excitation (heavy elements) or rotational/vibrational lines (molecules).
 \end{itemize}
 
-These cooling mechanisms (except inverse Compton scattering) involve two particles and are therefore more effective in higher density regions.
+All these cooling mechanisms (except inverse Compton scattering) involve two particles and are therefore more effective in higher density regions.
 
 If cooling is effective (short cooling time), the gas accretes directly onto a central proto-galaxy.
 If cooling time is long, the gas settles into hydrostatic equilibrium with halo (inner region can still cool and flow to the centre region)
@@ -575,7 +575,7 @@ This will lead to a runaway collapse of the gas which can then fragment and form
 
 Star formation is not well understood but can be characterised by the star formation rate $\dot{M}_{*}$ and the Initial Mass Function (IMF).
 The stellar population can then be evolved using stellar evolution.
-Star formation can be quiescent (in gas disks) or starburst (with accumulation of gas in small volumes, which can be triggered by interactions or instability.
+Star formation can be quiescent (in gas disks) or starburst (with accumulation of gas in small volumes, which can be triggered by interactions or instability).
 
 
 \subsection{Feedback}
@@ -593,11 +593,11 @@ They can reheat cold gas and thus suppress star formation, which is called negat
 
 Baryons are also effected by mergers. Depending on the masses of the merging haloes, different effects occur.
 
-If two halos of similar masses merge, violent relaxation quickly leads to a relaxed state for the new halo.
+If two haloes of similar masses merge, violent relaxation quickly leads to a relaxed state for the new halo.
 Hot gas from the progenitors is shock-heated and settles into hydrostatic equilibrium with the \ac{dm} halo potential.
 Central galaxies, if present, merge to a new central galaxy, which is likely an elliptical galaxy.
 
-If merging haloes have very different masses, the smaller halo orbits the main halo as a satellite until dynamical friction\sidenote{(Kinetic energy is transferred from a small object to a large object, making the small object sink towards the large one as it loses energy)} and tidal effects dissolve it.
+If merging haloes have very different masses, the smaller halo orbits within the main halo as a satellite until dynamical friction\sidenote{(Kinetic energy is transferred from a small object to a large object, making the small object sink towards the large one as it loses energy)} and tidal effects dissolve it.
 
 In the limit of very small haloes merging into large halo, the accretion can be thought of as smooth accretion.
 
@@ -639,7 +639,7 @@ The \ac{igm} also plays an important role in galaxy formation through the inflow
 	\item Hubble time: current expansion rate time scale ($H^{-1}$)
 	\item Dynamical time: time to orbit across steady state dynamical system
 	\item Cooling time: ratio between thermal energy to energy loss rate of gas
-	\item Star formation time: ratio of cold gas content and star formation rate
+	\item Star formation time: ratio of cold gas content and star formation rate. It tells how long it would take for a galaxy to run out of gas for star formation, if it would not be replenished.
 	\item Chemical enrichment time: time scale on which gas is enriched in heavy elements
 	\item Merging time: typical time before major merger
 	\item Dynamical friction time: time scale for a satellite in large halo to lose its orbital energy and merge to centre
@@ -669,8 +669,8 @@ A flow chart to determine the evolution of a galaxy is shown in \cref{fig:galaxy
 \begin{itemize}
 	\item Use N-body simulations (DM only) or Extended Press-Schechter to generate halo merger tree
 	\item For each halo track the hot gas, cold gas and stars
-	\item Use prescriptions to convert these components into one another and their metallicity (model cooling, star formation, feedback and chemical evolution
-	\item Use prescription for the evolution of these components in mergers and for the survival of satellites in parent halos.
+	\item Use prescriptions to convert these components into one another and their metallicity (model cooling, star formation, feedback and chemical evolution)
+	\item Use prescription for the evolution of these components in mergers and for the survival of satellites in parent haloes.
 \end{itemize}
 Relatively fast procedure with can then be compared to observations.
 
