--- a/astro-2.tex
+++ b/astro-2.tex
@@ -2,7 +2,7 @@
                fontsize=10pt,
                headings=big]{scrbook}
 
-\author{Thomas Birbacher}
+\author{Thomas Birbacher, revised by Jennifer Studer}
 \title{Astrophysics II}
 
 
